--- a/frontend-Hotel/src/app/components/Checkin/create/create.html
+++ b/frontend-Hotel/src/app/components/Checkin/create/create.html
@@ -20,11 +20,11 @@
           </div>
           <div class="flex justify-between items-center">
             <span class="text-sm font-semibold text-gray-700">Fecha de Check-in:</span>
-            <span class="text-sm text-gray-600">{{ reservation.checkin_date | date: 'fullDate' }}</span>
+            <span class="text-sm text-gray-600">{{ reservation.start_date | date: 'fullDate' }}</span>
           </div>
           <div class="flex justify-between items-center">
             <span class="text-sm font-semibold text-gray-700">Fecha de Check-out:</span>
-            <span class="text-sm text-gray-600">{{ reservation.checkout_date | date: 'fullDate' }}</span>
+            <span class="text-sm text-gray-600">{{ reservation.end_date | date: 'fullDate' }}</span>
           </div>
         </div>
 
