--- a/frontend-Hotel/src/app/components/Cliente/getall/getall.html
+++ b/frontend-Hotel/src/app/components/Cliente/getall/getall.html
@@ -30,6 +30,7 @@
                 <th>Teléfono</th>
                 <th>Email</th>
                 <th>Nacionalidad</th>
+                <th>Hotel</th>
                 <th class="text-center">Acciones</th>
             </tr>
         </ng-template>
@@ -43,6 +44,7 @@
                 <td>{{ cliente.phone }}</td>
                 <td>{{ cliente.email }}</td>
                 <td>{{ cliente.nationality }}</td>
+                <td>{{ getHotelName(cliente.hotel_id) }}</td>
                 <td class="text-center">
                     <div class="flex justify-center gap-2">
                         <p-button icon="pi pi-pencil" [routerLink]="['/Cliente/edit', cliente.id]" styleClass="p-button-rounded p-button-text p-button-warning" pTooltip="Editar" tooltipPosition="top"></p-button>
@@ -54,7 +56,7 @@
 
         <ng-template pTemplate="emptymessage">
             <tr>
-                <td colspan="8" class="text-center p-4">No se encontraron registros</td>
+                <td colspan="9" class="text-center p-4">No se encontraron registros</td>
             </tr>
         </ng-template>
     </p-table>
